--- a/I_miei_servizi.html
+++ b/I_miei_servizi.html
@@ -117,7 +117,7 @@
 
 
 <br>
-<p id="tariffeADestra">*LE TARIFFE SUDDETTE INCLUDONO LA RITENUTA D'ACCONTO DEL 20%</p>
+<p id="tariffeADestra">*LE TARIFFE SUDDETTE INCLUDONO L'IVA</p>
 
 <div class="settoriDiSpecializzazione">
     <br>
